# storm_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  dumb.c
DeadVariableHandler/: CMakeLists.txt  DeadVariableHandler.cpp
DoubleStore/: CMakeLists.txt  DoubleStore.cpp
Initialize/: CMakeLists.txt  Initialize.cpp
PutAtZero/: CMakeLists.txt  PutAtZero.cpp  PutAtZero.h
test/: cheeky.c  dumb.c  dumb.txt  example.c  test.c  test.sh
test/expected-results-tst/: test01_basic_c.txt  test02_int_c.txt  test03_several_int_c.txt  test04_several_load_int_c.txt  test05_int_fun_call_c.txt  test06_int_linked_fun_call_c.txt  test07_char_c.txt  test08_char_load_linked_fun_call_c.txt  test09_fun_call_long.txt  test101_basic_c.txt  test102_int_c.txt  test103_several_int_c.txt  test104_several_load_int_c.txt  test105_int_fun_call_c.txt  test106_int_linked_fun_call_c.txt  test107_char_c.txt  test108_char_load_linked_fun_call_c.txt  test109_fun_call_long.txt  test10_all_int_types_c.txt  test110_all_int_types_c.txt  test111_all_float_types_c.txt  test112_useless_store_c.txt  test113_several_load_one_store.txt  test11_all_float_types_c.txt  test12_useless_store_c.txt  test13_basic_array.txt  test201_basic_array.txt  test202_uninitialized_array.txt  test301_simple_if.txt  test302_if_else.txt  test303_switch.txt  test304_while_loop.txt  test305_nested_if.txt  test306_nested_while_loops.txt
test/src-test-files/: test03_several_int_c.c  test04_several_load_int_c.c  test05_int_fun_call_c.c  test06_int_linked_fun_call_c.c  test11_all_float_types_c.c
(+69 files in other folders)
